tests/rosetta/out/Smalltalk/averages-mode.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| arr1 arr2 c counts1 counts2 i k keys1 keys2 max1 max2 modes1 modes2 v |
arr1 := {2. 7. 1. 8. 2}.
counts1 := Dictionary from: {}.
keys1 := {}.
i := 0.
[(i < (arr1 size))] whileTrue: [
  v := arr1 at: i.
  ((v in counts1)) ifTrue: [
    counts1 at: v put: (counts1 at: v + 1).
  ] ifFalse: [
    counts1 at: v put: 1.
    keys1 := keys1 copyWith: v.
  ].
  i := (i + 1).
]
.
max1 := 0.
i := 0.
[(i < (keys1 size))] whileTrue: [
  k := keys1 at: i.
  c := counts1 at: k.
  ((c > max1)) ifTrue: [
    max1 := c.
  ] .
  i := (i + 1).
]
.
modes1 := {}.
i := 0.
[(i < (keys1 size))] whileTrue: [
  k := keys1 at: i.
  ((counts1 at: k = max1)) ifTrue: [
    modes1 := modes1 copyWith: k.
  ] .
  i := (i + 1).
]
.
Transcript show: ((modes1 asString)) printString; cr.
arr2 := {2. 7. 1. 8. 2. 8}.
counts2 := Dictionary from: {}.
keys2 := {}.
i := 0.
[(i < (arr2 size))] whileTrue: [
  v := arr2 at: i.
  ((v in counts2)) ifTrue: [
    counts2 at: v put: (counts2 at: v + 1).
  ] ifFalse: [
    counts2 at: v put: 1.
    keys2 := keys2 copyWith: v.
  ].
  i := (i + 1).
]
.
max2 := 0.
i := 0.
[(i < (keys2 size))] whileTrue: [
  k := keys2 at: i.
  c := counts2 at: k.
  ((c > max2)) ifTrue: [
    max2 := c.
  ] .
  i := (i + 1).
]
.
modes2 := {}.
i := 0.
[(i < (keys2 size))] whileTrue: [
  k := keys2 at: i.
  ((counts2 at: k = max2)) ifTrue: [
    modes2 := modes2 copyWith: k.
  ] .
  i := (i + 1).
]
.
Transcript show: ((modes2 asString)) printString; cr.
